Opened 16 years ago
Closed 16 years ago
#4138 closed bug (fixed)
[Tracker] some text doesn't fit in fnd panel
Reported by: | diver | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/Tracker | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
"Include Trash" label and "Remove" button text doesn't fit in fnd panel
hrev31840 in virtualbox
Attachments (1)
Change History (2)
by , 16 years ago
Attachment: | Find panel.png added |
---|
comment:1 by , 16 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Note:
See TracTickets
for help on using tickets.
Fixed in hrev32022. The panel isn't font sensitive yet, though, and needs a serious redesign, anyway.