* Fixed basic layout issues, and therefore bug #4138. This panel needs a serious   usability redesign, though, so I didn't bother letting it use the layout   engine for now.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@32022 a95241bf-73f2-0310-859d-f6bbb57e9c96